// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item renders with base props 1`] = `
<button
  className="lab-narrow-sidebar__item"
  onClick={[Function]}
  type="button"
>
  <span
    className="lab-narrow-sidebar__item-label"
  >
    Test item
  </span>
</button>
`;

exports[`Item renders with icon 1`] = `
<button
  className="lab-narrow-sidebar__item"
  onClick={[Function]}
  type="button"
>
  <span
    className="lab-icon lab-icon--star lab-icon--mineral-60 lab-narrow-sidebar__item-icon"
  />
  <span
    className="lab-narrow-sidebar__item-label"
  >
    Test item
  </span>
</button>
`;

exports[`Item renders with isActive 1`] = `
<button
  className="lab-narrow-sidebar__item lab-narrow-sidebar__item--active"
  onClick={[Function]}
  type="button"
>
  <span
    className="lab-narrow-sidebar__item-label"
  >
    Test item
  </span>
</button>
`;
